Phaseモジュール実装

--- a/プロジェクトディレクトリ構造,ファイル配置.md
+++ b/プロジェクトディレクトリ構造,ファイル配置.md
@@ -1,131 +1,125 @@
-# プロジェクトディレクトリ構造と主要ファイル
+# プロジェクトディレクトリ構造とファイル配置
 
 ## 設定ファイル群
 - `package.json`: プロジェクト依存関係、スクリプト定義
-- `tsconfig.json`: TypeScriptコンパイラ設定
 - `jest.config.js`: Jestテスト設定
 - `babel.config.js`: Babelトランスパイル設定
 - `.eslintrc.js`: ESLintコード品質設定
 - `.gitignore`: Git管理除外設定
+- `tsconfig.json`: TypeScript設定（現在は使用していないが参照用に保持）
 
 ## プロジェクト構造
 ```
 werewolf-gm-lib/
-├── src/
-│   ├── index.js          # メインエントリーポイント
+├── src/                    # ソースコード
+│   ├── index.js            # メインエントリーポイント
 │   │
-│   ├── core/
-│   │   ├── common/
+│   ├── core/               # コアモジュール
+│   │   ├── common/         # 共通ユーティリティ
 │   │   │   ├── Constants.js
 │   │   │   ├── utils.js
-│   │   │   ├── index.js
-│   │   │   └── __tests__/
-│   │   │       └── utils.test.js
+│   │   │   ├── __tests__/
+│   │   │   └── index.js
 │   │   │
-│   │   ├── error/
+│   │   ├── error/          # エラー処理システム
 │   │   │   ├── ErrorCatalog.js
 │   │   │   ├── ErrorHandler.js
 │   │   │   ├── ErrorLevel.js
 │   │   │   ├── Validator.js
-│   │   │   ├── index.js
-│   │   │   ├── ErrorCatalog.ts
-│   │   │   ├── ErrorHandler.ts
-│   │   │   └── index.ts
+│   │   │   └── index.js
 │   │   │
-│   │   └── event/
-│   │       ├── EventSystem.js
-│   │       └── index.js
+│   │   ├── event/          # イベント管理システム
+│   │   │   ├── EventSystem.js
+│   │   │   ├── __mocks__/
+│   │   │   └── index.js
+│   │   │
+│   │   └── index.js
 │   │
-│   ├── domain/
-│   │   ├── player/
+│   ├── domain/             # ドメインモデル
+│   │   ├── player/         # プレイヤー関連
 │   │   │   ├── Player.js
 │   │   │   ├── PlayerManager.js
-│   │   │   ├── index.js
-│   │   │   └── __tests__/
-│   │   │       ├── Player.test.js
-│   │   │       └── PlayerManager.test.js
+│   │   │   ├── __tests__/
+│   │   │   └── index.js
 │   │   │
-│   │   ├── role/
-│   │   │   ├── Role.js
-│   │   │   ├── Village.js
-│   │   │   ├── Villager.js
-│   │   │   ├── Werewolf.js
-│   │   │   ├── Fox.js
-│   │   │   ├── Heretic.js
-│   │   │   ├── Knight.js
-│   │   │   ├── Madman.js
-│   │   │   ├── Mason.js
-│   │   │   ├── Medium.js
-│   │   │   ├── Seer.js
-│   │   │   ├── ThirdParty.js
-│   │   │   ├── index.js
-│   │   │   └── __tests__/
-│   │   │       ├── Role.test.js
-│   │   │       ├── Village.test.js
-│   │   │       ├── Villager.test.js
-│   │   │       ├── Werewolf.test.js
-│   │   │       ├── Fox.test.js
-│   │   │       ├── Heretic.test.js
-│   │   │       ├── Knight.test.js
-│   │   │       ├── Madman.test.js
-│   │   │       ├── Mason.test.js
-│   │   │       ├── Medium.test.js
-│   │   │       ├── Seer.test.js
-│   │   │       ├── ThirdParty.test.js
-│   │   │       └── Villager.test.js
+│   │   ├── phase/          # フェーズ関連
+│   │   │   ├── Phase.js
+│   │   │   ├── PhaseManager.js
+│   │   │   ├── __tests__/
+│   │   │   └── index.js
 │   │   │
-│   │   ├── action/
-│   │   ├── phase/
-│   │   ├── victory/
-│   │   └── vote/
+│   │   ├── role/           # 役職関連
+│   │   │   └── index.js
+│   │   │
+│   │   ├── action/         # アクション関連
+│   │   │   └── index.js
+│   │   │
+│   │   ├── vote/           # 投票関連
+│   │   │   └── index.js
+│   │   │
+│   │   └── victory/        # 勝利条件関連
+│   │       └── index.js
 │   │
-│   ├── service/
-│   │   ├── player/
-│   │   ├── role/
-│   │   ├── action/
-│   │   ├── phase/
-│   │   ├── victory/
-│   │   └── vote/
+│   ├── service/            # サービスレイヤー
 │   │
-│   ├── interface/
-│   │   ├── extension/
-│   │   └── game/
+│   ├── interface/          # 外部インターフェース
 │   │
-│   └── future/
+│   └── future/             # 将来的な拡張機能
 │
-├── docs/                 # 各種設計書
+├── __tests__/              # テストディレクトリ
+│   ├── unit/               # 単体テスト
+│   │   ├── core/           # コアモジュールテスト
+│   │   │   ├── common/     # 共通ユーティリティテスト
+│   │   │   ├── error/      # エラー処理テスト
+│   │   │   └── event/      # イベント処理テスト
+│   │   │
+│   │   ├── domain/         # ドメインモデルテスト
+│   │   │   ├── player/     # プレイヤーテスト
+│   │   │   ├── phase/      # フェーズテスト
+│   │   │   ├── role/       # 役職テスト
+│   │   │   ├── action/     # アクションテスト
+│   │   │   ├── vote/       # 投票テスト
+│   │   │   └── victory/    # 勝利条件テスト
+│   │   │
+│   │   ├── service/        # サービステスト
+│   │   └── interface/      # インターフェーステスト
+│   │
+│   ├── integration/        # 統合テスト
+│   └── scenarios/          # シナリオテスト
+│
+├── dist/                   # ビルド出力ディレクトリ
+│
+├── docs/                   # ドキュメント
 │   ├── werewolf-architecture.md
 │   ├── victory-condition-design.md
 │   ├── phase-management-design.md
-│   └── その他設計書
+│   ├── voting-system-design.md
+│   ├── role-class-design.md
+│   ├── information-visibility-design-updated.md
+│   ├── werewolf-library-enhanced-spec.md
+│   ├── module-structure-design-updated.md
+│   ├── common-utils.md
+│   ├── common-utils-guide.md
+│   ├── core-modules.md
+│   ├── role-plugin-specification.md
+│   ├── ai-collaboration.md
+│   ├── development-guide.md
+│   └── CHANGELOG.md
 │
-├── __tests__/            # 追加のテストディレクトリ
-├── tests/                # テストディレクトリ
-├── dist/                 # コンパイル済みファイル
-├── coverage/             # テストカバレッジレポート
-├── examples/             # 使用例
-├── node_modules/         # 依存関係
-└── build_script/         # ビルドスクリプト
+├── __mocks__/              # モックディレクトリ
+├── examples/               # 使用例
+├── coverage/               # カバレッジレポート
+└── build_script/           # ビルドスクリプト
 ```
 
-## 主要なテストファイルの場所
-- `src/domain/player/__tests__/`
-  - `Player.test.js`
-  - `PlayerManager.test.js`
+## モジュールの実装状況
 
-- `src/domain/role/__tests__/`
-  - 各役職ごとのテストファイル 
-  (例: `Fox.test.js`, `Werewolf.test.js`, など)
+### 実装済み/進行中
+- **Core**:
+  - EventSystem: 基本実装あり
+  - ErrorSystem: ほぼ完成
+  - Common/Utils: 基本実装あり、拡張中
 
-- `src/core/common/__tests__/`
-  - `utils.test.js`
-
-## 追加情報
-- TypeScriptの型定義ファイル(`.ts`)が一部のコアモジュールに追加されています
-- バックアップファイル(`.bak`)が一部のディレクトリに存在します
-- `.DS_Store`などの隠しファイルが含まれています
-
-## プロジェクト関連スクリプト
-- ビルド: `npm run build`
-- テスト: `npm test`
-- カバレッジレポート: `npm run test:coverage`
+### 実装予定/進行中
+- **Domain**:
+  - Player: 実
